// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectorGroup Orientation should render with horizontal layout by default 1`] = `
.circuit-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.circuit-9 > div:not(:last-child) {
  margin-right: 16px;
  margin-bottom: 0;
}

.circuit-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px + 1px) 24px;
  box-shadow: 0 0 0 1px #CCC;
  margin-bottom: 0;
  width: 100%;
}

.circuit-1:hover {
  background-color: #F5F5F5;
}

.circuit-1:active {
  background-color: #E6E6E6;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #999;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #666;
}

<div
  aria-label="Choose an option"
  class="circuit-9"
  role="group"
>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_18"
      name="selector-group_17"
      type="radio"
      value="first"
    />
    <label
      class="circuit-1"
      for="selector_18"
    >
      Option 1
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_19"
      name="selector-group_17"
      type="radio"
      value="second"
    />
    <label
      class="circuit-1"
      for="selector_19"
    >
      Option 2
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_20"
      name="selector-group_17"
      type="radio"
      value="third"
    />
    <label
      class="circuit-1"
      for="selector_20"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`SelectorGroup Orientation should render with vertical layout 1`] = `
.circuit-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px + 1px) 24px;
  box-shadow: 0 0 0 1px #CCC;
  margin-bottom: 0;
  width: 100%;
}

.circuit-1:hover {
  background-color: #F5F5F5;
}

.circuit-1:active {
  background-color: #E6E6E6;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #999;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #666;
}

.circuit-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-9 > div:not(:last-child) {
  margin-right: 0;
  margin-bottom: 16px;
}

<div
  aria-label="Choose an option"
  class="circuit-9"
  orientation="vertical"
  role="group"
>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_22"
      name="selector-group_21"
      type="radio"
      value="first"
    />
    <label
      class="circuit-1"
      for="selector_22"
    >
      Option 1
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_23"
      name="selector-group_21"
      type="radio"
      value="second"
    />
    <label
      class="circuit-1"
      for="selector_23"
    >
      Option 2
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_24"
      name="selector-group_21"
      type="radio"
      value="third"
    />
    <label
      class="circuit-1"
      for="selector_24"
    >
      Option 3
    </label>
  </div>
</div>
`;

exports[`SelectorGroup should render with default styles 1`] = `
.circuit-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.circuit-9 > div:not(:last-child) {
  margin-right: 16px;
  margin-bottom: 0;
}

.circuit-2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-1 {
  display: inline-block;
  cursor: pointer;
  padding: 16px 24px;
  background-color: #FFF;
  text-align: center;
  position: relative;
  margin-bottom: 16px;
  border: none;
  border-radius: 8px;
  -webkit-transition: box-shadow 0.1s ease-in-out;
  transition: box-shadow 0.1s ease-in-out;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px + 1px) 24px;
  box-shadow: 0 0 0 1px #CCC;
  margin-bottom: 0;
  width: 100%;
}

.circuit-1:hover {
  background-color: #F5F5F5;
}

.circuit-1:active {
  background-color: #E6E6E6;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #999;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #666;
}

<div
  aria-label="Choose an option"
  class="circuit-9"
  role="group"
>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_2"
      name="selector-group_1"
      type="radio"
      value="first"
    />
    <label
      class="circuit-1"
      for="selector_2"
    >
      Option 1
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_3"
      name="selector-group_1"
      type="radio"
      value="second"
    />
    <label
      class="circuit-1"
      for="selector_3"
    >
      Option 2
    </label>
  </div>
  <div
    class="circuit-2"
  >
    <input
      class="circuit-0"
      id="selector_4"
      name="selector-group_1"
      type="radio"
      value="third"
    />
    <label
      class="circuit-1"
      for="selector_4"
    >
      Option 3
    </label>
  </div>
</div>
`;
